# planegcs

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  WRAPPER_PLAN.md  pyproject.toml  release.sh
.github/workflows/: ci.yml  release.yml
docs/: api.rst  conf.py  examples.rst  history.rst  index.rst  quickstart.rst  releasing.rst
history/: PLAN_01.md  PLAN_02b.md  README.md
python/planegcs/: __init__.py  _planegcs.pyi  sketch.py
src/: bindings.cpp  wrapper.h
src/planegcs/: Constraints.h  GCS.h  Geo.h  SketcherGlobal.h
src/planegcs/shims/: FCConfig.h  FCGlobal.h  boost_graph_adjacency_list.hpp
src/planegcs/shims/Base/: Console.h
tests/: test_arc_variable_radius.py  test_basic.py  test_circle.py  test_constraints.py  test_convenience.py  test_coverage_gaps.py  test_diagnosis.py  test_rounded_triangle.py  test_stubs.py  test_triangle.py
