[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "planegcs"
version = "0.1.1"
description = "Python bindings for FreeCAD's PlaneGCS 2D geometric constraint solver"
readme = "README.md"
license = {text = "LGPL-2.1-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "planegcs contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/spookylukey/planegcs"

[tool.scikit-build]
wheel.packages = ["python/planegcs"]

[tool.scikit-build.cmake.define]
CMAKE_BUILD_TYPE = "Release"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
]

[tool.cibuildwheel]
build = ["cp312-*", "cp313-*"]
skip = ["*-musllinux_*", "*-manylinux_i686", "*-win32"]
test-requires = "pytest"
test-command = "pytest {project}/tests -x"

[tool.cibuildwheel.linux]
before-all = """
yum install -y boost-devel || apt-get update && apt-get install -y libboost-dev
curl -L https://gitlab.com/libeigen/eigen/-/archive/3.4.0/eigen-3.4.0.tar.gz | tar xz -C /opt
cmake -S /opt/eigen-3.4.0 -B /opt/eigen-3.4.0/build -DCMAKE_INSTALL_PREFIX=/opt/eigen3-installed -DBUILD_TESTING=OFF
cmake --install /opt/eigen-3.4.0/build
"""

[tool.cibuildwheel.linux.environment]
CMAKE_PREFIX_PATH = "/opt/eigen3-installed"

[tool.cibuildwheel.windows]
before-all = "vcpkg install eigen3:x64-windows boost-graph:x64-windows boost-math:x64-windows"

[tool.cibuildwheel.windows.environment]
CMAKE_PREFIX_PATH = "C:/vcpkg/installed/x64-windows"
